Bug 49073 - FILEOPEN: Furigana (ruby text) and characters with them are missing in opened .docx files.
Summary: FILEOPEN: Furigana (ruby text) and characters with them are missing in opened...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: BSA
Keywords: filter:docx
: 67136 95016 (view as bug list)
Depends on:
Blocks: Ruby CJK
  Show dependency treegraph
 
Reported: 2012-04-23 02:55 UTC by chris.j.darko
Modified: 2017-10-01 08:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
document from link, saved as PDF using msWord 2007 (610.33 KB, application/pdf)
2012-09-12 12:03 UTC, sasha.libreoffice
Details
the same docx file, but all pictures are deleted using msWord 2007 (43.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-09-12 12:12 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chris.j.darko 2012-04-23 02:55:21 UTC
Problem description: 
Opening of .docx files containing furigana results in the omission of any characters which have furigana associated with them.

Steps to reproduce:
1. Open .docx file containing characters with associated furigana (ruby text).
2. Characters with furigana (ruby text) are completely missing; neither the characters nor their furigana (ruby text) are present.

Current behavior:
Characters and furigana (ruby text) associated with them are not there.

Expected behavior:
Characters and furigana (ruby text) associated with them should be there.

Platform (if different from the browser): 
Windows 7 x64
Comment 1 zephyrus00jp 2012-06-02 01:59:36 UTC
Hi,

I added a comparative result of exchanging document file ruby characters 
from an external mailing list discussion.

Bug 50607 - FILEOPEN, FILESAVE, FOMATTING : Japanese ruby-character handling is broken

I wish that posting can act as master bug entry for ruby character handling.
Comment 2 Joel Madero 2012-09-07 15:09:25 UTC
Please provide a document where we can see the problem. In general we don't like opening meta bugs (especially for only 2 bugs), as it just clogs FDO and makes it so developers have to comment on multiple locations. In the future please send our QA team an email to see if we would like a meta bug or to try to get faster action on bugs such as this one. 

I'm going to mark as NEEDINFO only because document(s) aren't provided. As soon as these are provided please change back to UNCONFIRMED and I'll try to get someone moving on this as it seems like it's a serious bug.
Comment 3 chris.j.darko 2012-09-07 15:44:33 UTC
See page 2 for the first instance of missing text.
This was the first file I could find that still had this issue, as I convinced my lecturers to instead start using .pdfs.

http://www.mediafire.com/?4kxpg3qh76qdf

There is a .docx with the issues mentioned, as well as a .pdf with the correct display.
Comment 4 Joel Madero 2012-09-07 15:48:11 UTC
Thanks, changing status back to UNCONFIRMED. In the future please attach documents directly into FDO vs. using third party sites. Thanks again for helping us make LO better for everyone
Comment 5 sasha.libreoffice 2012-09-12 12:03:40 UTC
Created attachment 67049 [details]
document from link, saved as PDF using msWord 2007
Comment 6 sasha.libreoffice 2012-09-12 12:09:04 UTC
reproduced in 3.6.1 on Fedora 64 bit
see also:
Bug 44784 - FORMATTING: Japanese Ruby Characters require an offset control in Asian Phonetic Guide
Comment 7 sasha.libreoffice 2012-09-12 12:12:57 UTC
Created attachment 67050 [details]
the same docx file, but all pictures are deleted using msWord 2007
Comment 8 tommy27 2013-09-10 23:49:20 UTC
*** Bug 67136 has been marked as a duplicate of this bug. ***
Comment 9 QA Administrators 2015-09-04 02:48:03 UTC Comment hidden (obsolete)
Comment 10 Buovjaga 2015-10-14 15:34:58 UTC
*** Bug 95016 has been marked as a duplicate of this bug. ***
Comment 11 Gaël Rousseau 2015-10-14 18:11:32 UTC
This bug is still present in version 5.0.2.2 on Ubuntu 14.04 LTS 32 bits. There is absolutely no change in the bug's behaviour.
Comment 12 Gaël Rousseau 2015-10-18 18:14:34 UTC
For information, there is no bug for a native .doc document. However, if you convert a faulty .docx document into a .doc document (or even .odt), furigana and associated characters will be missing.
Comment 13 Dave Hough 2016-02-07 00:51:48 UTC
Using LibreOfficeDev version 5.2.0.0.alpha0+, I tried editing the docx file and creating and editing a similar small file with 2 kanji and furigana: minna-san, konban wa.

If you save either file as .odt, the kanji and furigana are preserved and everything is fine. If you save it as .docx, the kanji and furigana are deleted. So it appears that the translation from the libreoffice way of handling furigana to the docx way is not being done properly.
Comment 14 Joel Madero 2016-02-07 00:53:20 UTC
Seems like loss of data to me so upping to Major - High.
Comment 15 Mark Hung 2017-10-01 08:10:01 UTC
(In reply to Dave Hough from comment #13)
> Using LibreOfficeDev version 5.2.0.0.alpha0+, I tried editing the docx file
> and creating and editing a similar small file with 2 kanji and furigana:
> minna-san, konban wa.
> 
> If you save either file as .odt, the kanji and furigana are preserved and
> everything is fine. If you save it as .docx, the kanji and furigana are
> deleted. So it appears that the translation from the libreoffice way of
> handling furigana to the docx way is not being done properly.

The description is about another different issue instead of original FILEOPEN issue. Original issue has been fixed and please open a new issue if you like.