Improving Asian phonetic guide for docx and rtf files.

RTF import, export, and ooxml export for ruby text are implemented.

tdf#49073 - FILEOPEN: Furigana (ruby text) and characters with them are
missing in opened .docx files.

tdf#50786 - [TASK, METABUG] FILEOPEN, FILESAVE, FORMATTING : Japanese
ruby-character handling is broken

Change-Id: I4a5c30bad180241e3344e9da7efe7da4369fb325
Reviewed-on: https://gerrit.libreoffice.org/17241
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>