writerfilter/source/dmapper/ConversionHelper.hxx
@@ -47,6 +47,7 @@ namespace ConversionHelper{
     SAL_DLLPUBLIC_EXPORT sal_Int32 convertTwipToMM100(sal_Int32 _t);
     SAL_DLLPUBLIC_EXPORT sal_uInt32 convertTwipToMM100Unsigned(sal_Int32 _t);
     sal_Int16 convertTableJustification( sal_Int32 nIntValue );
+    sal_Int16 convertRubyAlign( sal_Int32 nIntValue );
     sal_Int16 ConvertNumberingType(sal_Int32 nFmt);
 
     css::util::DateTime ConvertDateStringToDateTime(const OUString& rDateTime);
